# sympa-contribs

./: README.md
utils/sympa-pymanage/: .gitignore  README.md  TODO  pyproject.toml  sympa_manage.py
utils/sympa-pymanage/config/: sympa.conf.sample
utils/sympa-pymanage/utils/: bcolors.py  email.py  email_format.py  logger.py  parse_config.py  validate_options.py
