[project]
name = "sympa-pymanage"
version = "0.1.0"
description = "A project to manage python list from terminal as a mailing list owner"
authors = [
    {name = "Rémy Dernat",email = "remy.dernat@umontpellier.fr"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer (>=0.15.1,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
